--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false # Allow one of the matrix builds to fail without failing others
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.7, 3.8, 3.9, '3.10', '3.11']
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
         
         
     # The job
@@ -23,13 +23,12 @@ jobs:
     steps:
     
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         
       - name: Setup python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-          architecture: x64
           
       - name: Run tests and linting
         run: |
@@ -44,7 +43,7 @@ jobs:
 # ======================= BUILD WHEELS AND UPLOAD TO PYPI ==================================
 
       - name: Build wheels (non-windows) ${{ matrix.python-version }} on ${{ matrix.os }}
-        if: github.ref == 'refs/heads/master' && matrix.python-version == '3.9' && matrix.os != 'windows-latest'
+        if: github.ref == 'refs/heads/master' && matrix.python-version == '3.10' && matrix.os != 'windows-latest'
         env:
           CIBW_BUILD: 'cp37-* cp38-* cp39-* cp310-*  cp311-*'
           PYPI_PASSWORD: ${{ secrets.pypi_password }}
@@ -54,7 +53,7 @@ jobs:
           python -m twine upload dist/* -u tommyod -p "$PYPI_PASSWORD" --skip-existing;
           
       - name: Build wheels (windows) ${{ matrix.python-version }} on ${{ matrix.os }}
-        if: github.ref == 'refs/heads/master' && matrix.python-version == '3.9' && matrix.os == 'windows-latest'
+        if: github.ref == 'refs/heads/master' && matrix.python-version == '3.10' && matrix.os == 'windows-latest'
         env:
           CIBW_BUILD: 'cp37-* cp38-* cp39-* cp310-* cp311-*'
           PYPI_PASSWORD: ${{ secrets.pypi_password }}
