--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,9 +42,8 @@ jobs:
           
           
       - name: Build docs
-        if: matrix.python-version == '3.10' && matrix.os != 'ubuntu-latest'
+        if: matrix.python-version == '3.10' && matrix.os == 'ubuntu-latest'
         run: |
-          
           sudo apt install pandoc -y
           sphinx-build docs/source _build/html -W
 
