--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false # Allow one of the matrix builds to fail without failing others
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.8', '3.9', '3.10', '3.11']
         
         
     # The job
@@ -52,7 +52,7 @@ jobs:
       - name: Build wheels (non-windows) ${{ matrix.python-version }} on ${{ matrix.os }}
         if: github.ref == 'refs/heads/master' && matrix.python-version == '3.10' && matrix.os != 'windows-latest'
         env:
-          CIBW_BUILD: 'cp37-* cp38-* cp39-* cp310-*  cp311-*'
+          CIBW_BUILD: 'cp38-* cp39-* cp310-*  cp311-*'
           PYPI_PASSWORD: ${{ secrets.pypi_password }}
         run: |
           pip install cibuildwheel twine --upgrade;
@@ -62,7 +62,7 @@ jobs:
       - name: Build wheels (windows) ${{ matrix.python-version }} on ${{ matrix.os }}
         if: github.ref == 'refs/heads/master' && matrix.python-version == '3.10' && matrix.os == 'windows-latest'
         env:
-          CIBW_BUILD: 'cp37-* cp38-* cp39-* cp310-* cp311-*'
+          CIBW_BUILD: 'cp38-* cp39-* cp310-* cp311-*'
           PYPI_PASSWORD: ${{ secrets.pypi_password }}
         run: |
           pip install cibuildwheel twine --upgrade;
