--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,7 @@ jobs:
       - name: Run tests and linting
         run: |
           pip install pip --upgrade
-          pip install -r requirements.txt --quiet --upgrade --no-cache-dir
-          pip install pep8>=1.7.1 flake8>=3.5.0 black --upgrade --quiet
-          pip install -e .
+          pip install --no-cache-dir -e .[dev,test,lint]
           python -m black KDEpy -l 120 --check
           python -m flake8 --show-source --ignore=F811,W293,W391,W292,W291,W504,W503,E231 --max-line-length=120 --exclude="*examples.py,testing.py,*kde.py" KDEpy
           python -m pytest KDEpy --doctest-modules --capture=sys
