--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,35 @@
 [project]
 name = "KDEpy"
-version = "1.1.2"
-
+version = "1.1.3"
 dependencies = [
     "numpy>=1.14.2",
     "scipy>=1.0.1",
     "matplotlib>=2.2.2",
 ]
+description = "Kernel Density Estimation in Python."
+readme = {file = "README.md", content-type = "text/markdown"}
+authors = [
+  {name = "tommyod", email = "tommy.odland@gmail.com"},
+]
+license = {file = "LICENSE"}
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "License :: OSI Approved :: BSD License",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
+
+[project.urls]
+Repository = "https://github.com/tommyod/KDEpy"
 
 [project.optional-dependencies]
 dev = [
     "numpydoc>=0.7.0",
     "nbsphinx>=0.3.2",
     "ipython>=6.4.0",
+    "build>=0.10.0"
 ]
 test = [
     "pytest>=3.6.2"
