--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,9 @@ Repository = "https://github.com/tommyod/KDEpy"
 
 [project.optional-dependencies]
 dev = [
+    "sphinx<7",
     "numpydoc>=0.7.0",
-    "nbsphinx>=0.3.2",
+    "nbsphinx==0.9.1",
     "ipython>=6.4.0",
     "build>=0.10.0",
     "matplotlib>=2.2.2"
