--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
         env:
           CIBW_BUILD: 'cp38-* cp39-* cp310-* cp311-* cp312-*'
           CIBW_ARCHS_MACOS: x86_64 arm64
+          CIBW_SKIP: pp* *-musllinux_* *-manylinux_i686  # skip PyPy, musllinux, 32-bit Linux
         run: |
           pip install cibuildwheel --upgrade;
           python -m cibuildwheel --output-dir dist;
