--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "KDEpy"
 version = "1.1.9"
 dependencies = [
-    "numpy>=1.14.2,<2.0",
+    "numpy>=1.14.2",
     "scipy>=1.0.1,<2.0",
 ]
 description = "Kernel Density Estimation in Python."
