--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: CI/CD flow
+name: CI/CD
 
 on:
   push:
@@ -18,10 +18,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Cache pip packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
       - name: Install dependencies
         run: |
@@ -37,26 +46,42 @@ jobs:
 
       - name: Build wheels
         env:
-          CIBW_BUILD: cp${{ matrix.python-version//.}}*
+          CIBW_BUILD: cp${{ matrix.python-version == '3.10' && '310' || matrix.python-version == '3.11' && '311' || matrix.python-version == '3.12' && '312' || matrix.python-version }}*
           CIBW_ARCHS_MACOS: x86_64 arm64
           CIBW_SKIP: pp* *-musllinux_* *-manylinux_i686
         run: |
-          python -m cibuildwheel --output-dir dist
+          python -m cibuildwheel --output-dir wheelhouse
+
+      - name: Build source distribution
+        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
+        run: |
+          pip install build
+          python -m build --sdist --outdir dist
 
       - name: Store artifacts
         uses: actions/upload-artifact@v3
         with:
           name: python-package-distributions
-          path: dist/*.whl
+          path: |
+            wheelhouse/*.whl
+            dist/*.tar.gz
 
   build_docs:
     runs-on: ubuntu-latest
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop')
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+      - name: Cache pip packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-docs-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-docs-
       - name: Install dependencies
         run: |
           pip install --upgrade pip
@@ -64,6 +89,11 @@ jobs:
           sudo apt install pandoc -y
       - name: Build docs
         run: sphinx-build docs/source _build/html -W
+      - name: Store documentation
+        uses: actions/upload-artifact@v3
+        with:
+          name: documentation
+          path: _build/html
 
   publish:
     needs: [test_and_build, build_docs]
