--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,7 @@ name: Build wheels
 
 on: 
   workflow_dispatch:
+  push:
 
 jobs:
   build_wheels:
@@ -28,7 +29,7 @@ jobs:
 
       - name: Build wheels
         env:
-          CIBW_BUILD: 'cp38-* cp39-* cp310-* cp311-* cp312-*'
+          CIBW_BUILD: 'cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*'
           CIBW_ARCHS_MACOS: x86_64 arm64
           CIBW_SKIP: pp* *-musllinux_* *-manylinux_i686  # skip PyPy, musllinux, 32-bit Linux
         run: |
@@ -81,9 +82,9 @@ jobs:
           path: dist/
           
       # https://github.com/pypa/gh-action-pypi-publish
-      - name: Publish Python distribution to PyPI
-        uses: pypa/gh-action-pypi-publish@e53eb8b103ffcb59469888563dc324e3c8ba6f06
-        with:
-          skip-existing: true
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+#      - name: Publish Python distribution to PyPI
+#        uses: pypa/gh-action-pypi-publish@e53eb8b103ffcb59469888563dc324e3c8ba6f06
+#        with:
+#          skip-existing: true
+#          user: __token__
+#          password: ${{ secrets.PYPI_API_TOKEN }}
