--- a/.github/workflows/test_base.yml
+++ b/.github/workflows/test_base.yml
@@ -2,6 +2,7 @@ name: Build & test
 
 on:
   workflow_call:
+  push:
 
 jobs:
   build:
@@ -10,7 +11,7 @@ jobs:
       fail-fast: false # Allow one of the matrix builds to fail without failing others
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
 
     steps:
       - name: Checkout
