--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Install cibuildwheel
         run: |
-          pip install --upgrade pip
-          pip install cibuildwheel==2.15.0
+          pip install --upgrade pip Cython setuptools wheel
+          pip install cibuildwheel==2.21.3
 
       - name: Build wheels
         env:
