--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,3 +46,6 @@ lint = [
 [build-system]
 requires = ["setuptools>=45", "wheel", "cython>=0.29,<1.0.0", "oldest-supported-numpy"]
 build-backend = "setuptools.build_meta"
+
+[tool.cython]
+language_level = "3"
