--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 
 [project.urls]
@@ -43,5 +44,5 @@ lint = [
 ]
 
 [build-system]
-requires = ["setuptools>=45", "wheel", "cython>=0.29,<1.0.0", "oldest-supported-numpy"]
+requires = ["setuptools>=45", "wheel", "cython>=3.0,<4.0", "oldest-supported-numpy"]
 build-backend = "setuptools.build_meta"
