--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,10 @@ jobs:
           python-version: 3.11
 
       - name: Install build
-        run: python -m pip install build
+        run: |
+          python -m pip install build twine pkginfo --upgrade
+          twine check
+        
 
       - name: Run sdist
         run: python -m build --sdist
@@ -89,9 +92,14 @@ jobs:
           name: python-package-distributions
           path: dist/
           
+      - name: Install build
+        run: |
+          python -m pip install build twine pkginfo --upgrade
+          twine check
+          
       # https://github.com/pypa/gh-action-pypi-publish
       - name: Publish Python distribution to PyPI
-        uses: pypa/gh-action-pypi-publish@e53eb8b103ffcb59469888563dc324e3c8ba6f06
+        uses: pypa/gh-action-pypi-publish@v1.12.4
         with:
           skip-existing: true
           user: __token__
