--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,11 +65,11 @@ jobs:
       - name: Install build
         run: |
           python -m pip install build twine pkginfo --upgrade
-          twine check dist
-        
 
       - name: Run sdist
-        run: python -m build --sdist
+        run: |
+          python -m build --sdist
+          twine check dist
 
       - name: Store artifacts
         uses: actions/upload-artifact@v4
