--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Run sdist
         run: |
           python -m build --sdist
-          twine check dist
+          twine check dist/*
 
       - name: Store artifacts
         uses: actions/upload-artifact@v4
@@ -95,7 +95,7 @@ jobs:
       - name: Install build
         run: |
           python -m pip install build twine pkginfo --upgrade
-          twine check dist
+          twine check dist/*
           
       # https://github.com/pypa/gh-action-pypi-publish
       - name: Publish Python distribution to PyPI
