--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install cibuildwheel
         run: |
           pip install --upgrade pip
-          pip install cibuildwheel==2.21.3
+          pip install cibuildwheel==3.2.1
       
       - name: Set up QEMU
         if: runner.os == 'Linux'
@@ -34,7 +34,7 @@ jobs:
 
       - name: Build wheels
         env:
-          CIBW_BUILD: 'cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*'
+          CIBW_BUILD: 'cp38-* cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*'
           CIBW_ARCHS_LINUX: auto aarch64
           CIBW_ARCHS_MACOS: x86_64 arm64
           CIBW_SKIP: pp* *-musllinux_* *-manylinux_i686  # skip PyPy, musllinux, 32-bit Linux
